--- a/MythicalCanines/MythicalCanines.csproj
+++ b/MythicalCanines/MythicalCanines.csproj
@@ -6,6 +6,16 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="text\PressStart2P.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="text\PressStart2P.ttf">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="4.3.1" />
